--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "type": "git",
     "url": "git://github.com/titenq/page.git"
   },
-  "private": false,
+  "private": true,
+  "homepage": "http://titenq.github.io/page",
   "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
