--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/titenq/page.git"
   },
   "private": true,
-  "homepage": "http://titenq.github.io/page",
+  "homepage": "https://titenq.github.io/page",
   "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
